Fix spacings

--- a/src/ChooseGatewayView/styles.module.css
+++ b/src/ChooseGatewayView/styles.module.css
@@ -40,7 +40,7 @@
 .content__info {
     display: flex;
     flex-grow: 1;
-    margin-right: 2.125rem;
+    margin-right: 1.6875rem;
     flex-direction: column;
     box-sizing: border-box;
     --collapsable-height: 96px;
@@ -71,7 +71,7 @@
     font-size: 0.75rem;
     opacity: 0.5;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(3rem, 6rem));
+    grid-template-columns: repeat(auto-fill, minmax(3rem, 6.625rem));
 }
 
 /*child detail*/
@@ -105,6 +105,7 @@
 }
 
 .content__price .gateway-logo img {
+    max-width: 5rem;
     width: 100%;
     height: var(--collapsable-height);
 }
